<resources>
    <string name="app_name">VibeCampo</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="pref_user">pref_user</string>
    <string name="obsolete_info">Hey <![CDATA[<b><font color=#388E3C>%1$s</b>]]>, The version of VibeCampo that you are using is obsolete. as of  <![CDATA[<b><font color=#FF9800>%2$s</b>]]>, Please download the latest version to continue using VibeCampo.</string>
    <string name="pref_email">pref_email</string>
    <string name="pref_phone">pref_phone</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Join VibeCampo</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About Us</string>
    <string name="title_profile">Profile</string>
    <string name="title_contacts">Contact Us</string>
    <string name="title_search">Search</string>
    <string name="title_chats">Chats</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="hint_email_username">Username or email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_fullname">Full name</string>
    <string name="pref_last_stats_refresh">last_stats_refresh</string>
    <string name="title_post">Post</string>
    <string name="title_ambassadors">Ambassadors</string>
    <string name="title_swag">Swag</string>
    <string name="title_goals">Goals</string>
    <string name="title_communities">Communities</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="following">Following</string>
    <string name="tips">Tips</string>
    <string name="followers">Followers</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="read_more_format">%1$s <![CDATA[<b><font color=#808080>read more…</b>]]>.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_password">pref_password</string>
    <string name="title_activity_vibe_to">Vibe to</string>
    <string name="selected_photos">Selected photos</string>
    <string name="send">Send</string>
    <string name="hint_new_vibe">Now write your vibe here</string>
    <string name="image">Photo</string>
    <string name="camera">Camera</string>
    <string name="guide_recent_photos">Recent photos.</string>
    <string name="title_activity_camera">Camera</string>
    <string name="message_maximum_photos_reached">You cannot add more than 3 photos.</string>
    <string name="title_activity_image_edit">Edit Photo</string>
    <string name="crop">Crop</string>
    <string name="left">Left</string>
    <string name="read_more">Read more</string>
    <string name="right">Right</string>
    <string name="blur">Blur</string>
    <string name="ratio">Ratio</string>
    <string name="category">Category</string>
    <string name="ellipsized_text">%1$s …</string>
    <string name="shape">Shape</string>
    <string name="filter">Filter</string>
    <string name="rotate">Rotate</string>
    <string name="corners">Corners</string>
    <string name="color">Color</string>
    <string name="hint_vibe_title">Title of your vibe</string>
    <string name="post_to_a_community">Vibe to a community</string>
    <string name="posting_to">Posting to %1$s</string>
    <string name="vibe_to">Vibe to</string>
    <string name="message_sending">Sending…</string>
    <string name="account">Account</string>
    <string name="action_search">Search</string>
    <string name="pref_new_vibe_title">pref_new_vibe_title</string>
    <string name="pref_new_vibe_text">pref_new_vibe_text</string>
    <string name="profile">Profile</string>
    <string name="delete_account">Delete my account</string>
    <string name="report_problem">Report a problem</string>
    <string name="report_problem_summary">Tell us what problems you are experiencing using VibeCampo</string>
    <string name="delete_account_summary">Delete your account completely from VibeCampo</string>
    <string name="profile_summary">See your VibeCampo profile.</string>
    <string name="account_privacy_summary">Change vibes, comments, follows and phone number privacy.</string>
    <string name="chat_privacy_summary">Change online status, writing status, last seen, and presence status privacy.</string>
    <string name="title_activity_account_privacy">Account Privacy</string>
    <string name="title_activity_chat_privacy">Chat Privacy</string>
    <string name="update_user_name">Change your username.</string>
    <string name="user_name">Username</string>
    <string name="update_phone">Change your phone number.</string>
    <string name="update_email">Change your email address.</string>
    <string name="sign_out_summary">Sign out from this account.</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_summary">Change your password.</string>
    <string name="title_activity_news">News and Alerts</string>
    <string name="summary_news_and_alerts">See VibeCampo News, Offers and Alerts.</string>
    <string name="hint_goal_name">Enter goal name</string>
    <string name="hint_goal_description">Describe your goal</string>
    <string name="continue_">Continue</string>
    <string name="create_a_goal_in">Create a goal in</string>
    <string name="leaders_board">Leaders Board</string>
    <string name="check_in">Check In</string>
</resources>